--- a/Front-end/src/Pages/Auth/Forms/Form.css
+++ b/Front-end/src/Pages/Auth/Forms/Form.css
@@ -18,11 +18,11 @@
 
 .google-btn {
   width: 100%;
-  height: 42px;
+  height: 80px;
   background-color: white;
   box-shadow: 1px 1px 5px rgb(163, 177, 198, 0.6),
     -1px -1px 5px rgba(255, 255, 255, 0.5);
-  border-radius: 8px;
+  border-radius: 50px;
   font: normal normal normal 16px/19px Gilroy;
   letter-spacing: 0px;
   color: #707070;
@@ -64,6 +64,7 @@
 }
 
 .login-form {
+  width: 20%;
   margin-top: 40px;
 }
 .login-form-otp {
