--- a/Front-end/src/Pages/HomePage/CSS/HomeBanner.css
+++ b/Front-end/src/Pages/HomePage/CSS/HomeBanner.css
@@ -1,7 +1,4 @@
-.BannerSection{
-  
-    display:flex;
-}
+
 
 .BannerImage{
     position: relative !important;
@@ -14,7 +11,7 @@
     z-index:2;
     background-repeat: no-repeat;
     background-position: top;
-    object-fit: fill;
+    object-fit: stretch;
 
 }
 
