--- a/Front-end/src/Pages/Auth/Forms/Form.css
+++ b/Front-end/src/Pages/Auth/Forms/Form.css
@@ -4,6 +4,7 @@
   justify-content: space-around;
   align-items: center;
   justify-items: center;
+  margin-top: 150px;
 }
 
 .Sumbit-btn {
@@ -19,7 +20,7 @@
 .google-btn {
   width: 100%;
   height: 80px;
-  background-color: white;
+  background-color: #fafaf8;
   box-shadow: 1px 1px 5px rgb(163, 177, 198, 0.6),
     -1px -1px 5px rgba(255, 255, 255, 0.5);
   border-radius: 50px;
