--- a/Front-end/src/Pages/HomePage/CSS/Homepage.css
+++ b/Front-end/src/Pages/HomePage/CSS/Homepage.css
@@ -37,7 +37,7 @@
   left: 10%;
   color: white;
   font: normal normal 600 29px/31px Gilroy;
-  opacity: 1;
+  opacity: 10;
   z-index: 10;
 }
 
@@ -52,7 +52,7 @@
   text-align: center;
   font: normal normal 15px/22px Gilroy;
   letter-spacing: 0.72px;
-  color: #08bd80;
+  color: #A15589;
   background: #ffffff 0% 0% no-repeat padding-box;
   border-radius: 8px;
 }
