--- a/Front-end/src/Pages/HomePage/CSS/Homepage.css
+++ b/Front-end/src/Pages/HomePage/CSS/Homepage.css
@@ -5,11 +5,13 @@
 }
 .Course-Content-wrap {
   flex-wrap: wrap;
+  
 }
 .Course-Content-col {
   display: flex;
   flex-direction: column;
   margin-left: 30px;
+  
 }
 
 .Interest-banner {
@@ -64,6 +66,12 @@
 
 .productLink {
   text-decoration: none;
+}
+
+.course_card{
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
 }
 
 .productLink:hover {
