--- a/Front-end/src/Pages/HomePage/CSS/Preference.css
+++ b/Front-end/src/Pages/HomePage/CSS/Preference.css
@@ -2,7 +2,6 @@
     display:flex;
     flex-wrap:wrap;
     justify-content: center;
-    
 }
 
 .Preference-buttons button{
@@ -21,7 +20,7 @@
 .SumbitBtn{
    display: flex;
    justify-content: center;
-   margin-top: 30px;
+   margin-top: 100px;
   
    
 
@@ -46,6 +45,7 @@
 }
 
 .touched{
+    background-color: grey!important;
     color:white;
 
 }
