Enroll👍, sweet alerts and  login alerts, live chat update, UI updates, final changes

--- a/Front-end/src/Pages/CoursePage/CSS/CoursePage.css
+++ b/Front-end/src/Pages/CoursePage/CSS/CoursePage.css
@@ -7,6 +7,12 @@
   height: auto;
 }
 
+div.is-disabled
+{
+  pointer-events: none;
+  opacity: 0.7;
+}
+
 .Section2 {
   display: flex;
   flex-wrap: wrap;
